forts/manifests/data-connector-sap-bw.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "3005"
    prometheus.io/scrape: "true"
  labels:
    action: command
    app: data-connector-sap-bw
    app.kubernetes.io/component: data-connector-sap-bw
    app.kubernetes.io/instance: data-connector-sap-bw
    app.kubernetes.io/name: data-connector-sap-bw
    app.kubernetes.io/version: 1.2.18
    chart: data-connector-sap-bw-1.2.18
    heritage: Helm
    release: data-connector-sap-bw
  name: data-connector-sap-bw-cmd
  namespace: default
spec:
  ports:
    - name: http
      port: 3005
      protocol: TCP
      targetPort: 3005
    - name: grpc
      port: 50060
      protocol: TCP
      targetPort: 50060
  selector:
    action: command
    app: data-connector-sap-bw
    release: data-connector-sap-bw
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "3005"
    prometheus.io/scrape: "true"
  labels:
    action: reload
    app: data-connector-sap-bw
    app.kubernetes.io/component: data-connector-sap-bw
    app.kubernetes.io/instance: data-connector-sap-bw
    app.kubernetes.io/name: data-connector-sap-bw
    app.kubernetes.io/version: 1.2.18
    chart: data-connector-sap-bw-1.2.18
    heritage: Helm
    release: data-connector-sap-bw
  name: data-connector-sap-bw-rld
  namespace: default
spec:
  ports:
    - name: http
      port: 3005
      protocol: TCP
      targetPort: 3005
    - name: grpc
      port: 50060
      protocol: TCP
      targetPort: 50060
  selector:
    action: reload
    app: data-connector-sap-bw
    release: data-connector-sap-bw
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9121"
    prometheus.io/scrape: "true"
  labels:
    action: web
    app: data-connector-sap-bw
    app.kubernetes.io/component: data-connector-sap-bw
    app.kubernetes.io/instance: data-connector-sap-bw
    app.kubernetes.io/name: data-connector-sap-bw
    app.kubernetes.io/version: 1.2.18
    chart: data-connector-sap-bw-1.2.18
    heritage: Helm
    release: data-connector-sap-bw
  name: data-connector-sap-bw-web
  namespace: default
spec:
  ports:
    - name: http
      port: 6384
      protocol: TCP
      targetPort: 6384
  selector:
    action: web
    app: data-connector-sap-bw
    release: data-connector-sap-bw
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-connector-sap-bw
    app.kubernetes.io/component: data-connector-sap-bw
    app.kubernetes.io/instance: data-connector-sap-bw
    app.kubernetes.io/name: data-connector-sap-bw
    app.kubernetes.io/version: 1.2.18
    chart: data-connector-sap-bw-1.2.18
    heritage: Helm
    release: data-connector-sap-bw
  name: data-connector-sap-bw-cmd
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      action: command
      app: data-connector-sap-bw
      release: data-connector-sap-bw
  template:
    metadata:
      annotations:
        checksum/configs: f4f4c5bd6c147172eb1fc450477912e8ed3f66ed5f673199b58c12f79f5bfe46
        checksum/secrets: 6cafdd1285d4eb8dad35dab18cbf5101c71694e9cfa8bd849b6be536bf2a118a
      labels:
        action: command
        app: data-connector-sap-bw
        release: data-connector-sap-bw
    spec:
      containers:
        - env:
            - name: DATA_HOST
              valueFrom:
                configMapKeyRef:
                  key: dataHost
                  name: data-connector-sap-bw-configs
            - name: DATA_PORT_RANGE_END
              valueFrom:
                configMapKeyRef:
                  key: dataPortRangeEnd
                  name: data-connector-sap-bw-configs
            - name: DATA_PORT_RANGE_START
              valueFrom:
                configMapKeyRef:
                  key: dataPortRangeStart
                  name: data-connector-sap-bw-configs
            - name: LICENSES_URI
              valueFrom:
                configMapKeyRef:
                  key: licensesUri
                  name: data-connector-sap-bw-configs
            - name: LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  key: logLevel
                  name: data-connector-sap-bw-configs
            - name: JAEGER_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: OTLP_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: HTTP_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpProxy
                  name: qliksense-configs
            - name: HTTPS_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpsProxy
                  name: qliksense-configs
            - name: NO_PROXY
              valueFrom:
                configMapKeyRef:
                  key: noProxy
                  name: qliksense-configs
            - name: MONGODB_URI
              valueFrom:
                secretKeyRef:
                  key: mongodbUri
                  name: qliksense-secrets
            - name: MONGODB_URI_FILE
              value: /run/secrets/qlik.com/qliksense/mongodbUri
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redisPassword
                  name: qliksense-secrets
            - name: REDIS_PASSWORD_FILE
              value: /run/secrets/qlik.com/qliksense/redisPassword
          image: ghcr.io/qlik-download/data-connector-sap-bw:1.2.18
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          name: data-connector-sap-bw
          ports:
            - containerPort: 3005
              name: http
              protocol: TCP
            - containerPort: 50060
              name: grpc
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/ssl/certs
              name: ca-certificates
            - mountPath: /run/secrets/qlik.com/qliksense
              name: qliksense-secrets
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes:
        - name: data-connector-sap-bw-secrets
          secret:
            secretName: data-connector-sap-bw-secrets
        - name: ca-certificates
          persistentVolumeClaim:
            claimName: ca-certificates
        - name: qliksense-secrets
          secret:
            secretName: qliksense-secrets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-connector-sap-bw
    app.kubernetes.io/component: data-connector-sap-bw
    app.kubernetes.io/instance: data-connector-sap-bw
    app.kubernetes.io/name: data-connector-sap-bw
    app.kubernetes.io/version: 1.2.18
    chart: data-connector-sap-bw-1.2.18
    heritage: Helm
    release: data-connector-sap-bw
  name: data-connector-sap-bw-rld
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      action: reload
      app: data-connector-sap-bw
      release: data-connector-sap-bw
  template:
    metadata:
      annotations:
        checksum/configs: 709412538a6d5b0af8064a7e8c04e317a2c6e3f7d9b818cb2f3a06075d8c4878
        checksum/secrets: 6cafdd1285d4eb8dad35dab18cbf5101c71694e9cfa8bd849b6be536bf2a118a
      labels:
        action: reload
        app: data-connector-sap-bw
        release: data-connector-sap-bw
    spec:
      containers:
        - env:
            - name: DATA_HOST
              valueFrom:
                configMapKeyRef:
                  key: dataHost
                  name: data-connector-sap-bw-configs
            - name: DATA_PORT_RANGE_END
              valueFrom:
                configMapKeyRef:
                  key: dataPortRangeEnd
                  name: data-connector-sap-bw-configs
            - name: DATA_PORT_RANGE_START
              valueFrom:
                configMapKeyRef:
                  key: dataPortRangeStart
                  name: data-connector-sap-bw-configs
            - name: LICENSES_URI
              valueFrom:
                configMapKeyRef:
                  key: licensesUri
                  name: data-connector-sap-bw-configs
            - name: LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  key: logLevel
                  name: data-connector-sap-bw-configs
            - name: SHUTDOWN_TIMEOUT
              valueFrom:
                configMapKeyRef:
                  key: shutdownTimeout
                  name: data-connector-sap-bw-configs
            - name: ENABLE_SHUTDOWN_DRAIN
              value: "false"
            - name: MAX_ACTIVE_RELOADS
              value: "3"
            - name: JAEGER_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: OTLP_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: HTTP_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpProxy
                  name: qliksense-configs
            - name: HTTPS_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpsProxy
                  name: qliksense-configs
            - name: NO_PROXY
              valueFrom:
                configMapKeyRef:
                  key: noProxy
                  name: qliksense-configs
            - name: MONGODB_URI
              valueFrom:
                secretKeyRef:
                  key: mongodbUri
                  name: qliksense-secrets
            - name: MONGODB_URI_FILE
              value: /run/secrets/qlik.com/qliksense/mongodbUri
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redisPassword
                  name: qliksense-secrets
            - name: REDIS_PASSWORD_FILE
              value: /run/secrets/qlik.com/qliksense/redisPassword
          image: ghcr.io/qlik-download/data-connector-sap-bw:1.2.18
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          name: data-connector-sap-bw
          ports:
            - containerPort: 3005
              name: http
              protocol: TCP
            - containerPort: 50060
              name: grpc
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readiness
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/ssl/certs
              name: ca-certificates
            - mountPath: /run/secrets/qlik.com/qliksense
              name: qliksense-secrets
      imagePullSecrets:
        - name: artifactory-docker-secret
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data-connector-sap-bw-secrets
          secret:
            secretName: data-connector-sap-bw-secrets
        - name: ca-certificates
          persistentVolumeClaim:
            claimName: ca-certificates
        - name: qliksense-secrets
          secret:
            secretName: qliksense-secrets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    action: web
    app: data-connector-sap-bw
    app.kubernetes.io/component: data-connector-sap-bw
    app.kubernetes.io/instance: data-connector-sap-bw
    app.kubernetes.io/name: data-connector-sap-bw
    app.kubernetes.io/version: 1.2.18
    chart: data-connector-sap-bw-1.2.18
    heritage: Helm
    release: data-connector-sap-bw
  name: data-connector-sap-bw-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      action: web
      app: data-connector-sap-bw
      release: data-connector-sap-bw
  template:
    metadata:
      annotations:
        checksum/configs: 4b3856defdf35c30ddca164a63329508ee964b40f429a1d7be1cff4e2c1be864
        checksum/secrets: 6cafdd1285d4eb8dad35dab18cbf5101c71694e9cfa8bd849b6be536bf2a118a
      labels:
        action: web
        app: data-connector-sap-bw
        release: data-connector-sap-bw
    spec:
      containers:
        - env:
            - name: JAEGER_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: OTLP_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: HTTP_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpProxy
                  name: qliksense-configs
            - name: HTTPS_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpsProxy
                  name: qliksense-configs
            - name: NO_PROXY
              valueFrom:
                configMapKeyRef:
                  key: noProxy
                  name: qliksense-configs
            - name: MONGODB_URI
              valueFrom:
                secretKeyRef:
                  key: mongodbUri
                  name: qliksense-secrets
            - name: MONGODB_URI_FILE
              value: /run/secrets/qlik.com/qliksense/mongodbUri
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redisPassword
                  name: qliksense-secrets
            - name: REDIS_PASSWORD_FILE
              value: /run/secrets/qlik.com/qliksense/redisPassword
          image: ghcr.io/qlik-download/data-connector-sap-bw-web:1.2.18
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          name: data-connector-sap-bw
          ports:
            - containerPort: 6384
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/ssl/certs
              name: ca-certificates
            - mountPath: /run/secrets/qlik.com/qliksense
              name: qliksense-secrets
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes:
        - name: data-connector-sap-bw-secrets
          secret:
            secretName: data-connector-sap-bw-secrets
        - name: ca-certificates
          persistentVolumeClaim:
            claimName: ca-certificates
        - name: qliksense-secrets
          secret:
            secretName: qliksense-secrets
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/login?returnto=$escaped_request_uri
    nginx.ingress.kubernetes.io/rewrite-target: /$1/$2
  labels:
    app: data-connector-sap-bw
    app.kubernetes.io/component: data-connector-sap-bw
    app.kubernetes.io/instance: data-connector-sap-bw
    app.kubernetes.io/name: data-connector-sap-bw
    app.kubernetes.io/version: 1.2.18
    chart: data-connector-sap-bw-1.2.18
    heritage: Helm
    release: data-connector-sap-bw
  name: data-connector-sap-bw-web
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: data-connector-sap-bw-web
                port:
                  number: 6384
            path: /customdata/64/(QvSAPBwConnector)/(.+)
            pathType: ImplementationSpecific
